--- a/config/database.yml
+++ b/config/database.yml
@@ -6,8 +6,7 @@
 development:
   adapter: postgresql
   database: yams
-  pool: 5
-  timeout: 5000
+  host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -15,11 +14,9 @@ development:
 test:
   adapter: postgresql
   database: yamstest
-  pool: 5
-  timeout: 5000
+  host: localhost
 
 production:
   adapter: postgresql
   database: yams
-  pool: 5
-  timeout: 5000
+  host: localhost
